<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GQ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to Gate Quiz</string>
    <string name="leveleasy">Easy</string>
    <string name="levelmoderate">Moderate</string>
    <string name="levelhard">Hard</string>
    <string name="title_activity_easy">EasyActivity</string>
    <string name="title_activity_moderate">ModerateActivity</string>
    <string name="Question">Question</string>
    <string name="opta">opta</string>
    <string name="optb">optb</string>
    <string name="optc">optc</string>
    <string name="Submit">Submit</string>
    <string name="FinalAns">finalans</string>
    <string name="Nextquestion">Next Question</string>
    <string name="title_activity_hard">HardActivity</string>
    <string name="CheckAnswer">Check Answer</string>
    <string name="NextQuestion">Next Question</string>
    <string name="optA">optA</string>

</resources>
