<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModerateActivity" >

    <TextView
        android:id="@+id/QuestionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/Question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/NextQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CheckAnsButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="@string/NextQuestion" />

    <RadioGroup
        android:id="@+id/AnsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QuestionView"
        android:layout_below="@+id/QuestionView"
        android:layout_marginTop="49dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opta" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optb" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optc" />
    </RadioGroup>

    <TextView
        android:id="@+id/AnsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/NextQuestionButton"
        android:layout_alignLeft="@+id/NextQuestionButton"
        android:layout_marginBottom="18dp"
        android:text="@string/FinalAns"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/CheckAnsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AnsView"
        android:layout_alignLeft="@+id/AnsRadioGroup"
        android:layout_marginBottom="26dp"
        android:text="@string/CheckAnswer" />

</RelativeLayout>